--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <title>Dev Pong</title>
     <style>
         body {
-            align-content: center;
             align-items: center;
+            -webkit-align-items: center;
             background : #202020;
             display: flex;
+            flex-direction: column-reverse;
+            display: -webkit-flex;
             margin: 0;
         }
         canvas {
@@ -18,6 +20,12 @@
             margin : 0 auto;
         }
     </style>
+    <!-- when using for pixel art -> QR code, etc. or canvases image rendering should be set to pixalated
+    because  then the browser wont try to smooth out the colors like it would do for a potrait and make
+    the image look as if it was made with larger pixels-->
+
+    <!-- -->
+    <!-- -->
 </head>
 <body>
     <canvas id="pong" width="600" height="400"></canvas>
